Refactor structure to align with UML diagrams, apply camelCase naming conventions and add JavaFX GUI